--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "moment": "^2.30.1",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
