--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.10",
     "ts-node": "^10.9.2"
   }
