--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.10",
     "ts-node": "^10.9.2"
