--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "readline": "^1.3.0",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
