--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "v1": "ts-node src/v1/index.ts"
+    "v1": "ts-node src/v1/index.ts",
+    "v2": "ts-node src/v1/main.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "readline": "^1.3.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
