--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "v1": "ts-node src/v1/index.ts",
-    "v2": "ts-node src/v1/main.ts"
+    "v2": "ts-node src/v1/main.ts",
+    "test": "ts-node src/v1/test.ts"
   },
   "author": "",
   "license": "ISC",
